
datadir = @GNOME_DATADIR@/gnome/help/terraform/C

EXTRA_DIST =	faq.html hacking.html index.html render.html theme.html \
		topic.dat tutorial.html mainwindow.png terrainwindow.png wire.png \
		povray.png show_objects.html bushes.png bushOne.png fern.png \
		flowerPatch.png grass_flowers.png grass_multiflowers.png \
		grass_patch_big.png grass_patch_small.png grass_prairie.png \
		monolith.png sevenBushes.png stone_agate.png stone_dents.png \
		stone_peeble.png stone_wrinkles.png TRACE_bee.png TRACE_boat.png \
		TRACE_butterfly.png TRACE_needlebranch.png tree_1.png tree_2.png \
		tree_3.png tree_4.png tree_5.png tree_6.png tree_7.png tree_8.png \
		tree_palm_1.png tree_palm_patch.png tree_parametric_1.png \
		tree_parametric_2.png tree_parametric_3.png tree_parametric_4.png \
		tree_parametric_5.png tree_parametric_6.png tree_parametric_7.png

data_DATA =	faq.html hacking.html index.html render.html theme.html \
		topic.dat tutorial.html mainwindow.png terrainwindow.png wire.png \
		povray.png show_objects.html bushes.png bushOne.png fern.png \
		flowerPatch.png grass_flowers.png grass_multiflowers.png \
		grass_patch_big.png grass_patch_small.png grass_prairie.png \
		monolith.png sevenBushes.png stone_agate.png stone_dents.png \
		stone_peeble.png stone_wrinkles.png TRACE_bee.png TRACE_boat.png \
		TRACE_butterfly.png TRACE_needlebranch.png tree_1.png tree_2.png \
		tree_3.png tree_4.png tree_5.png tree_6.png tree_7.png tree_8.png \
		tree_palm_1.png tree_palm_patch.png tree_parametric_1.png \
		tree_parametric_2.png tree_parametric_3.png tree_parametric_4.png \
		tree_parametric_5.png tree_parametric_6.png tree_parametric_7.png
