datadir = @GNOME_DATADIR@/gnome/help/terraform/fr

EXTRA_DIST =	faq.html \
		hacking.html \
		index.html \
		render.html \
		theme.html \
		topic.dat \
		tutorial.html \
		show_objects.html

data_DATA =	faq.html \
		hacking.html \
		index.html \
		render.html \
		theme.html \
		topic.dat \
		tutorial.html \
		show_objects.html
